# ur_inverse_solutions

./: CMakeLists.txt  README.md  package.xml
src/: ur_inverse_test.cpp
