<?xml version="1.0"?>
<package>
  <name>ur_inverse_solutions</name>
  <version>1.0.0</version>
  <description>
     Provides forward and inverse kinematics for Universal Robots designs.
     See http://hdl.handle.net/1853/50782 for details.
  </description>

  <author  >pyni</author>
 <maintainer email="pyni_sjtu@qq.com">pyni</maintainer>
  <license>BSD</license>
 
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_kinematics</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>boost</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_kinematics</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>boost</run_depend>
 
</package>
